css, fix -> vertically align header content

--- a/public/main.css
+++ b/public/main.css
@@ -39,7 +39,7 @@ p a:visited {
 	text-decoration: none;
 }
 
-h2 { font-size: 21px; font-weight: lighter; vertical-align: top; }
+h2 { font-weight: lighter; vertical-align: top; }
 h3 { margin-bottom: 8px; font-size: 19px; font-weight: lighter; }
 h4 { margin-bottom: 4px; }
 
@@ -58,7 +58,7 @@ p {
 span.notification-positiv { display: block; color: #67A921; }
 span.notification-negativ { display: block; color: #E56952; }
 
-#header { background: #006699; height: 32px; box-shadow: 0px -3px 13px 3px }
+#header { background: #006699; box-shadow: 0px -3px 13px 3px }
 #header h2 { margin: 6px 0 0 23px; }
 #content { margin-bottom: 48px; }
 
